# reinforge

./: .gitignore  Cargo.toml  README.md
src/: main.rs  maindup.rs
src/arm/: count.rs  mod.rs  normal.rs
src/bandit/: agent.rs  mod.rs  model.rs
src/environment/: error.rs  mod.rs  multiarm.rs
src/plot/: mod.rs  violinold.rs
src/plot/violin/: enums.rs  layout.rs  mod.rs  trace.rs
src/policy/: epsilon.rs  mod.rs  policy.rs  selection.rs
src/runner/: ensemble.rs  error.rs  history.rs  mod.rs  run.rs  runner.rs  step.rs  trace.rs  trace_step.rs  trace_table.rs
src/statistics/: mod.rs  prelude.rs  reward.rs
